--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
-  "name": "remnote-plugin-template-react",
-  "version": "0.0.1",
+  "name": "Heatmap",
+  "version": "1.0",
   "license": "MIT",
   "scripts": {
     "check-types": "tsc",
@@ -12,14 +12,9 @@
   "dependencies": {
     "@remnote/plugin-sdk": "^0.0.9",
     "apexcharts": "^3.35.5",
-    "chart.js": "^3.9.1",
-    "chartjs-chart-matrix": "^1.1.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
-    "react-chartjs-2": "^4.3.1",
-    "react-dom": "^17.0.2",
-    "react-grid-heatmap": "^1.2.0",
-    "react-heatmap-grid": "^0.9.0"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
